feat: update homepage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,21 @@ background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
+
+
+::-webkit-scrollbar {
+  width: 0px;
+  
+}
+
+
+::-webkit-scrollbar-track {
+ background: var(--background);
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: #8892B0;
+  border-radius: 10px;
+  
+}
