--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,12 +15,19 @@ background-clip: text;
   
 }
 
-.gradient-border {
+/* .gradient-border {
   border: 2px solid; 
   border-image: var(--gradient_2, linear-gradient(109deg, #FBDA61 0%, rgba(255, 90, 205, 0.84) 86.08%));
   border-image-slice: 1;
   border-radius: 0.75rem; 
+} */
+.gradient-border{
+  background: linear-gradient(#1E1E1E, #1E1E1E) padding-box,
+              var(--gradient_2, linear-gradient(109deg, #FBDA61 0%, rgba(255, 90, 205, 0.84) 86.08%)) border-box;
+  border-radius: 1em;
+  border: 2px solid transparent;
 }
+
 ::-webkit-scrollbar-track {
  background: var(--background);
 }
