--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,34 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-.gradient-text{
-  background: var(--gradient_2, linear-gradient(109deg, #FBDA61 0%, rgba(255, 90, 205, 0.84) 86.08%));
-background-clip: text;
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+.gradient-text {
+  background: var(
+    --gradient_2,
+    linear-gradient(109deg, #fbda61 0%, rgba(255, 90, 205, 0.84) 86.08%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-
+.gradient-bg {
+  background: var(
+    --gradient_2,
+    linear-gradient(109deg, #fbda61 0%, rgba(255, 90, 205, 0.84) 86.08%)
+  );
+}
 
 ::-webkit-scrollbar {
   width: 0px;
-  
 }
 
-
-.gradient-border{
-  background: linear-gradient(#1E1E1E, #1E1E1E) padding-box,
-              var(--gradient_2, linear-gradient(109deg, #FBDA61 0%, rgba(255, 90, 205, 0.84) 86.08%)) border-box;
+.gradient-border {
+  background: linear-gradient(#1e1e1e, #1e1e1e) padding-box,
+    var(
+        --gradient_2,
+        linear-gradient(109deg, #fbda61 0%, rgba(255, 90, 205, 0.84) 86.08%)
+      )
+      border-box;
   border-radius: 1em;
   border: 2px solid transparent;
 }
 
 ::-webkit-scrollbar-track {
- background: var(--background);
+  background: var(--background);
 }
 
-
 ::-webkit-scrollbar-thumb {
-  background: #8892B0;
+  background: #8892b0;
   border-radius: 10px;
-  
 }
